# bufunfa-back-end

./: .gitignore  README.md  environment.py  main.py  pyproject.toml  requirements.txt  teste B.postman_collection.json
controllers/: authentication_controller.py  fetch_current_stock_price_controller.py  get_investments_controller.py  investment_controller.py  load_investment_controller.py  stock_controller.py
deploy/: api.dockerfile  bufunfa_local_env.yaml
deploy/bf/: .env.api  api.dockerfile  bufunfa_local_env.yaml  nginx.conf  nginx.dockerfile
domain/: investment.py  stock.py
presenters/: authentication_presenter.py  fetch_stock_prices_presenter.py  get_investment_presenter.py  load_investment_presenter.py  transaction_presenter.py
repositories/: stock_repository.py  transaction_repository.py  user_repository.py
src/: .coverage  .gitignore  README.md  app_factory.py  environment.py  main.py  requirements.txt  settings.py  singleton.py
src/business_exceptions/: __init__.py  bf_base_exception.py  invalid_investment_values_error.py  invalid_user_values_error.py  use_case_exceptions.py
src/controllers/: __init__.py  authentication_controller.py  fetch_current_stock_price_controller.py  get_dashboard_info_controller.py  get_investments_controller.py  get_stock_controller.py  load_investment_controller.py  signup_controller.py  stock_controller.py
src/database/: __init__.py  mongodb.py
src/domain/: dashboard_info.py  investment.py  stock.py  user.py
src/factories/: InvestmentFactory.py  StockFactory.py  __init__.py  investment_factory.py  stock_factory.py
src/presenters/: __init__.py  authentication_presenter.py  (+7 more)
tests/: test_stock_repository.py
use_cases/: fetch_current_stock_prices.py  get_investments.py  load_investments.py  load_stocks.py
utils/: authentication_utils.py
(+55 files in other folders)
